--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,11 +16,11 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: #CFF5E7;
 }
 
 body {
   color: black;
-  background: white;
 }
 
 a {
