--- a/styles/Topbar.module.css
+++ b/styles/Topbar.module.css
@@ -1,12 +1,11 @@
 .topbar {
     width: 100%;
-    height: 70px;
-    background-color: white;
+    height: 50px;
+    background-color: whitesmoke;
     color: black;
     position: fixed;
     top: 0;
     z-index: 3;
-    transition: all 1s ease;
 }
 .wrapper {
     padding: 10px 30px;
