--- a/styles/Toggle.module.css
+++ b/styles/Toggle.module.css
@@ -1,12 +1,12 @@
 .t{
     width: 50px;
-    height: 25px;
+    height: 20px;
     border-radius: 20px;
-    border: 1pz solid #999;
+    border: 1px solid #999;
     background-color: white;
     position: fixed;
-    top: 10px;
-    right: 10px;
+    top: 5px;
+    right: 15px;
     z-index: 999;
     display: flex;
     align-items: center;
@@ -20,7 +20,7 @@
 
 .tButton{
     width: 25px;
-    height: 25px;
+    height: 20px;
     border-radius: 50%;
     background-color: #999;
     position: absolute;
