--- a/styles/Topbar.module.css
+++ b/styles/Topbar.module.css
@@ -1,23 +1,21 @@
 .topbar {
     width: 100%;
-    height: 50px;
+    height: 30px;
     background-color: whitesmoke;
     color: black;
-    position: fixed;
-    top: 0;
-    z-index: 3;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
-.wrapper {
+.left {
     padding: 10px 30px;
     display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    gap:10px;
+    justify-content: space-between;
+    flex-direction: row;
 }
 .logo {
-    font-size: 40px;
+    font-size: 20px;
     font-weight: 700;
-    text-decoration: none;
     color: inherit;
     margin-right: 40px;
 }
@@ -33,4 +31,15 @@
 .itemContainer span {
     font-size: 15px;
     font-weight: 500;
+}
+.right{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+@media screen and (max-width: 480px) {
+    .itemContainer {
+      display: none;
+    }
 }
