projects page working

--- a/styles/Project.module.css
+++ b/styles/Project.module.css
@@ -1,41 +1,37 @@
 .p {
-    width: 30%;
-    height: 40vh;
+    max-width: 400px;
+    height: 70vh;
     margin: 20px 10px;
-    border: 2px solid rgb(243, 242, 242);
-    border-radius: 10px 10px 0px 0px;
     overflow: hidden;
+    background-color: honeydew;
+    padding: 10px;
   }
   
-  .pBrowser {
-    height: 20px;
-    background-color: rgb(243, 242, 242);
-    display: flex;
-    align-items: center;
-    position: sticky;
-    z-index: 2;
+  .pDesc {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
   }
-  
-  .pCircle {
-    width: 6px;
-    height: 6px;
-    border-radius: 50%;
-    margin: 3px;
-    background-color: white;
-  }
-  
   .pImg {
     width: 100%;
-    transition: all 10s ease;
+    height: 60%;
+    object-position: top center;
+    transition: all 5s ease-in-out;
   }
   
-  .p:hover .pImg {
-    transform: translateY(-100%);
+  .pImg:hover {
+    object-position: bottom center;
+  }
+
+  .pGithub {
+    background-color:#171515;
+  }
+  .pDemo {
+    background-color:#59b256;
   }
   
   @media screen and (max-width: 480px) {
-    .p {
-      width: 40%;
-      height: 20vh;
-    }
+    
   }
