--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -1,19 +1,60 @@
 .a {
-    height: 100vh;
     display: flex;
-    align-items: center;
     flex-direction: column;
     justify-content: center;
-  }
-      
-  .aTitle {
-    font-weight: 400;
-  }
+    padding: 5px 20px 20px 20px;
+}
+ 
+.aTop{
+  flex:1;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
   
-  .aSub {
-    margin: 20px 0px;
-  }
-    
+.aTitle {
+    font-weight: 400;
+}
+.aIcon{
+  border-radius: 50%;
+  background-color: rgb(196, 202, 205);
+  width: 20px;
+  height: 20px;
+}
+  
+.aSub {
+    margin: 10px 0px;
+}
+
+.aResume {
+  width: fit-content;
+  background-color: rgb(196, 229, 229);
+  margin-bottom: 10px;
+  padding: 5px 10px;
+}
+
+.aSkills {
+  display: flex;
+  gap: 10px;
+  flex-direction: row;
+}
+.aSkill1 {
+  background-color: antiquewhite;
+  padding: 2px 10px;
+}
+.aSkill2 {
+  background-color: rgb(159, 216, 195);
+  padding: 2px 10px;
+}
+.aSkill3 {
+  background-color: rgb(92, 191, 125);
+  padding: 2px 10px;
+}
+.aSkill4 {
+  background-color: rgb(194, 151, 182);
+  padding: 2px 10px;
+}
+
   
   @media screen and (max-width:480px) {
       .a{
