--- a/styles/Intro.module.css
+++ b/styles/Intro.module.css
@@ -1,82 +1,104 @@
-.container {
-    display:flex;
-    align-items: center;
-}
-.icons{
-    flex:1;
+.i {
+    height: 100vh;
     display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    padding: 200px;  
     gap:5px;
 }
-.icon{
-    width: 30px;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.icon :hover{
-    background-color: aquamarine;
-    border-radius: 100%;
-}
-
-.button {
-    gap:1px;
-    border-radius: 10px;
-    padding:3px;
-}
-.buttonText{
- font-size:small;
-}
-
-.i {
-    display: flex;
-    height: 100vh;
-  }
-  .iLeft {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .iRight {
-    flex: 1;
-    position: relative;
-  }
-  .iBg {
-    clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
-    background-color: #74c4c1;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    right: 0;
-  }
-  .iLeftWrapper {
-    padding: 50px;
-    height: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
   
-  .iIntro {
+.iIntro {
     font-size: 40px;
     font-weight: 300;
-  }
+}
   
-  .iName {
+.iName {
     font-size: 40px;
-  }
+}
   
-  .iTitle {
+.iTitle {
     height: 20px;
-   }
-  .iTitleItem {
-    height: 50px;
-    font-size: 25px;
-    font-weight: bold;
     color: #59b256;
-    display: flex;
-    align-items: center;
+}
+.iDesc {
+    height: 50px;
+    font-size: 18px;
   }
-      
+
+
+.iButton1{
+  position: relative;
+  font-size: 18px;
+  padding: 5px 2px;
+  height: 20px;
+  text-transform: lower;
+  background-color: transparent;
+  text-transform: lowercase;
+  z-index: 1;
+  transition: all 0.25s;
+}
+.iButton1:before {
+    content: "";
+    height: 100%;
+    width: 100%;
+    position: absolute; 
+    left: 0;
+    top: 0;
+    width: 0px;
+    background-color: cadetblue; 
+    z-index: -1;
+    transition: all 0.25s;
+  }
+  .iButton1:hover {
+    color: #fff;
+  }
+  .iButton1:hover:before {
+    width: 100%;
+  }
+
+  .iButton2{
+    position: relative;
+    font-size: 18px;
+    padding: 5px 2px;
+    height: 20px;
+    text-transform: lowercase;
+    background-color: transparent;
+    z-index: 1;
+    transition: all 0.25s;
+  }
+  .iButton2:before {
+      content: "";
+      height: 100%;
+      width: 100%;
+      position: absolute; 
+      left: 0;
+      top: 0;
+      width: 0px;
+      background-color: rgb(165, 128, 204); 
+      z-index: -1;
+      transition: all 0.25s;
+    }
+    .iButton2:hover {
+      color: #fff;
+    }
+    .iButton2:hover:before {
+      width: 100%;
+    }
+
+@media screen and (max-width:480px) {
+  .i{
+    padding: 0px;
+    gap:0px;
+  }
+
+  .iIntro {
+    font-size: 20px;
+  }
+  .iName{
+    font-size: 20px;
+  }
+  .iDesc{
+font-size: 15px;
+  }
+}
