--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -2,11 +2,10 @@
     padding: 50px 100px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
+    align-items: flex-start;
   }
   
-  .pTexts {
+  .pTitle {
     width: 65%;
   }
   
