added extra page for project

--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -6,7 +6,7 @@
   .cBg {
     width: 20px;
     height: 100%;
-    background-color: #59b256;
+    background-color: #39B5E0;
     position: absolute;
   }
   
