--- a/styles/Topbar.module.css
+++ b/styles/Topbar.module.css
@@ -1,8 +1,8 @@
 .topbar {
     width: 100%;
     height: 30px;
-    background-color: whitesmoke;
-    color: black;
+    background-color: #39B5E0;
+    color: white;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -13,16 +13,10 @@
     justify-content: space-between;
     flex-direction: row;
 }
-.logo {
-    font-size: 20px;
-    font-weight: 700;
-    color: inherit;
-    margin-right: 40px;
-}
 .itemContainer {
     display: flex;
     align-items: center;
-    margin-left: 30px;
+    margin-left: 20px;
 }
 .icon {
     font-size: 18px;
@@ -37,6 +31,67 @@
     align-items: center;
     justify-content: center;
 }
+
+.iButton1{
+    font-size: 18px;
+    font-weight: 500;
+    margin-left: 20px;
+    position: relative;
+    height: 20px;
+    background-color: transparent;
+    text-transform: capitalize;
+    z-index: 1;
+    transition: all 0.25s;
+  }
+  .iButton1:before {
+      content: "";
+      height: 100%;
+      width: 100%;
+      position: absolute; 
+      left: 0;
+      top: 0;
+      width: 0px;
+      background-color: cadetblue; 
+      z-index: -1;
+      transition: all 0.25s;
+    }
+    .iButton1:hover {
+      color: #fff;
+    }
+    .iButton1:hover:before {
+      width: 100%;
+    }
+  
+
+    .iButton2{
+        font-size: 18px;
+        font-weight: 500;
+        margin-left: 20px;
+        position: relative;
+        height: 20px;
+        background-color: transparent;
+        text-transform: lowercase;
+        z-index: 1;
+        transition: all 0.25s;
+      }
+      .iButton2:before {
+          content: "";
+          height: 100%;
+          width: 100%;
+          position: absolute; 
+          left: 0;
+          top: 0;
+          width: 0px;
+          background-color: cadetblue; 
+          z-index: -1;
+          transition: all 0.25s;
+        }
+        .iButton2:hover {
+          color: #fff;
+        }
+        .iButton2:hover:before {
+          width: 100%;
+        }
 
 @media screen and (max-width: 480px) {
     .itemContainer {
